hphp/hack/test/typecheck/new_inference/typehole/lambda_tyvar.php.like_types.exp
File "lambda_tyvar.php", line 7, characters 24-62:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
File "lambda_tyvar.php", line 8, characters 24-81:
Cannot determine types of lambda parameters in strict mode. Please add type hints on parameters. (Typing[4224])
